welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:26: error: too many arguments for method faireV: ()Unit
  faireV(Color.Yellow)
        ^MethodsPicture:27: error: too many arguments for method faireV: ()Unit
  faireV(Color.Red)
        ^MethodsPicture:28: error: too many arguments for method faireV: ()Unit
  faireV(Color.Blue)
        ^MethodsPicture:29: error: too many arguments for method faireV: ()Unit
  faireV(Color.Green)
        ^