welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  avance()
  faireMotif()
}

def faireV(){
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()

}

def faireMotif(){
  faireV(Color.Yellow)
  faireV(Color.Red)
  faireV(Color.Blue)
  faireV(Color.Green)
}
